Solve the problem that can not fit 100% full screen height when some auto height layout.

--- a/src/app/fullscreen/fullscreen.scss
+++ b/src/app/fullscreen/fullscreen.scss
@@ -22,3 +22,13 @@
     visibility: hidden;
   }
 }
+
+html.fullscreen-mode {
+  height: 100%!important;
+
+  body {
+    height: 100%!important;
+    overflow: hidden!important;
+  }
+
+}
